--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
+name: Python Build, Lint, Test
 
 on:
   push:
@@ -17,6 +17,11 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
+        extension: ["",",langchain", ",pandas", ",huggingface"]
+        include:
+         - python-version: "3.9"
+         - python-version: "3.10"
+         - python-version: "3.11"
 
     steps:
     - uses: actions/checkout@v3
@@ -27,7 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e ".[dev]"
+        python -m pip install -e ".[dev${{matrix.extension}}]"
     - name: Lint with pre-commit
       run: |
         pre-commit run --all-files
