--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
-        extension: ["",",langchain", ",pandas", ",huggingface"]
         include:
-         - python-version: "3.9"
-         - python-version: "3.10"
-         - python-version: "3.11"
+          - extension: langhcain
+          - extension: pandas
+          - extension: huggingface
+
 
     steps:
     - uses: actions/checkout@v3
@@ -32,7 +32,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e ".[dev${{matrix.extension}}]"
+        python -m pip install -e ".[dev]"
+    - if: ${{ matrix.extension }}
+      run: python -m pip install -e ".[${{ matrix.extension }}]"
     - name: Lint with pre-commit
       run: |
         pre-commit run --all-files
