--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
-        include:
-          - extension: langhcain
-          - extension: pandas
-          - extension: huggingface
-
+        extension: [False, "langchain", "pandas", "huggingface"]
 
     steps:
     - uses: actions/checkout@v3
@@ -33,11 +29,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -e ".[dev]"
-    - if: ${{ matrix.extension }}
-      run: python -m pip install -e ".[${{ matrix.extension }}]"
+    - name: Install ${{matrix.extension}} dependency
+      if: ${{ matrix.extension != False}}
+      run: python -m pip install -e ".[${{matrix.extension}}]"
     - name: Lint with pre-commit
       run: |
         pre-commit run --all-files
-    - name: Test with pytest
-      run: |
-        pytest -m unit
+    - name: Plain unit tests with pytest
+      if: ${{ matrix.extension == False}}
+      run: pytest -m unit
+    - name: ${{matrix.extension}} unit tests with pytest
+      if: ${{ matrix.extension != False}}
+      run: pytest -m unit or ${{matrix.extension}}
