--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
-        extension: [False, "langchain", "pandas", "huggingface"]
+        extension: [false, "langchain", "pandas", "huggingface"]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,14 +30,14 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install -e ".[dev]"
     - name: Install ${{matrix.extension}} dependency
-      if: ${{ matrix.extension != False}}
+      if: ${{ matrix.extension != false}}
       run: python -m pip install -e ".[${{matrix.extension}}]"
     - name: Lint with pre-commit
       run: |
         pre-commit run --all-files
     - name: Plain unit tests with pytest
-      if: ${{ matrix.extension == False}}
+      if: ${{ matrix.extension == false}}
       run: pytest -m unit
     - name: ${{matrix.extension}} unit tests with pytest
-      if: ${{ matrix.extension != False}}
+      if: ${{ matrix.extension != false}}
       run: pytest -m unit or ${{matrix.extension}}
