--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,15 +29,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -e ".[dev]"
-    - name: Install ${{matrix.extension}} dependency
+    - name: Install Extension dependency
       if: ${{ matrix.extension != false}}
       run: python -m pip install -e ".[${{matrix.extension}}]"
     - name: Lint with pre-commit
-      run: |
-        pre-commit run --all-files
+      run: pre-commit run --all-files
     - name: Plain unit tests with pytest
       if: ${{ matrix.extension == false}}
       run: pytest -m unit
-    - name: ${{matrix.extension}} unit tests with pytest
-      if: ${{ matrix.extension != false}}
-      run: pytest -m unit or ${{matrix.extension}}
+    - if: ${{ matrix.extension != false}}
+      name: Extension tests with pytest
+      run: pytest -m 'unit or ${{matrix.extension}}'
