fix: adding environment label to integration test workflow
Signed-off-by: James Sutton <james.sutton@uk.ibm.com>

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -13,6 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    environment: integration-tests
     strategy:
       fail-fast: false
       matrix:
