--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ibm-generative-ai"
-version = "0.1.14"
+dynamic = ["version"]
 authors = [
   {name="Lee Martie", email="lee.martie@ibm.com"},
   {name="Ana Fucs", email="ana.fucs@ibm.com"},
@@ -36,7 +36,6 @@ dev = [
   "pytest-cov>=4.0.0",
   "sphinx>=6.1.3",
   "furo>=2022.12.7",
-  "sphinxemoji>=0.2.0",
   "twine>=4.0.2",
   "pytest-asyncio>=0.20.3",
   "pytest-mock>=3.10.0",
