feat: GitHub Workflows for ibm-generative-ai (#17)
- Adding main build, lint and test workflow
- Adding Documentation Build and deploy workflow
- Adding Publish to pypi workflow
------

Signed-off-by: James Sutton <james.sutton@uk.ibm.com>
Signed-off-by: Mairead ONeill <moneill@ibm.com>
Signed-off-by: vdemers <vdemers@ibm.com>
Signed-off-by: Adriana Meza Soria <Adriana.Meza.Soria@ibm.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ name: Python Build, Lint, Test
 
 on:
   push:
-    branches: [ "main", "develop" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "develop"  ]
+    branches: [ "main" ]
 
 jobs:
   build:
