--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Data downloaded by examples and tests
+examples/user/adult.data.csv
+
+
 # Pickle files
 *.pkl
 
@@ -44,6 +48,7 @@ pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
+coverage/
 .tox/
 .nox/
 .coverage
