fix: changing integration tests to use GENAI_ environment variables
Signed-off-by: James Sutton <james.sutton@uk.ibm.com>
Signed-off-by: Mairead O'Neill <moneill@ibm.com>

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -30,6 +30,6 @@ jobs:
         python -m pip install -e ".[dev]"
     - name: Run integration tests
       env:
-        WATSONX_API_ENDPOINT: ${{ vars.WATSONX_API_ENDPOINT }}
-        WATSONX_API_KEY: ${{ secrets.WATSONX_API_KEY }}
+        GENAI_API: ${{ vars.GENAI_API }}
+        GENAI_KEY: ${{ secrets.GENAI_KEY }}
       run: pytest -m integration --no-cov
