--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -e ".[dev]"
+        python -m pip install -e ".[all]"
     - name: Run integration tests
       env:
         GENAI_API: ${{ vars.GENAI_API }}
