--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,10 @@ readme = "README.md"
 dependencies = [
     "urllib3<2", # https://github.com/psf/requests/issues/6432
     "requests>=2.31.0",
-    "pydantic<=1.10.10",
+    "pydantic==2.1.1",
     "python-dotenv>=1.0.0",
-    "aiohttp>=3.8.4",
-    "pyyaml>=0.2.5",
+    "aiohttp>=3.8.5",
+    "pyyaml==6.0.1",
     "httpx>=0.24.1",
     "aiolimiter>=1.1.0",
     "tqdm>=4.65.0"
@@ -33,21 +33,23 @@ requires-python = ">=3.9"
 
 [project.optional-dependencies]
 dev = [
-  "pytest>=7.3.2",
+  "pytest>=7.4.0",
   "pytest-dotenv>=0.5.2",
   "pre-commit>=3.3.2",
   "pytest-cov>=4.1.0",
-  "sphinx>=6.1.3",
+  "sphinx>=7.1.0",
   "furo>=2022.12.7",
   "twine>=4.0.2",
-  "pytest-asyncio>=0.21.0",
-  "pytest-mock>=3.10.0",
+  "pytest-asyncio>=0.21.1",
+  "pytest-mock>=3.11.1",
   "setuptools-scm>=7.1.0",
   "pytest-httpx>=0.22.0",
-  "build>=0.10.0"
+  "build>=0.10.0",
+  "flake8==6.0.0",
+  "flake8-bugbear==23.7.10"
 ]
 langchain = [
-  "langchain>=0.0.200"
+  "langchain>=0.0.242"
 ]
 huggingface = [
   "datasets>=2.13.0"
@@ -56,8 +58,8 @@ pandas = [
   "pandas>=2.0.0"
 ]
 localserver = [
-  "uvicorn>=0.22.0",
-  "fastapi>=0.97.0"
+  "uvicorn>=0.23.1",
+  "fastapi>=0.100.0"
 ]
 
 # As new extensions are added, they should also be added
@@ -76,7 +78,6 @@ where=[
 ]
 
 [tool.pytest.ini_options]
-addopts = "--cov --cov-report term-missing --cov-fail-under 80"
 markers = [
     "unit: tests that can run completely independently of the GENAI API",
     "integration: tests that require the GENAI API to run",
