--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ readme = "README.md"
 dependencies = [
     "urllib3<2", # https://github.com/psf/requests/issues/6432
     "requests>=2.31.0",
-    "pydantic<=1.10.10",
+    "pydantic<2",
     "python-dotenv>=1.0.0",
     "aiohttp>=3.8.4",
     "pyyaml>=0.2.5",
