--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "pyyaml>=6.0.0",
     "httpx>=0.24.1",
     "aiolimiter>=1.1.0",
-    "tqdm>=4.65.0"
+    "tqdm>=4.65.0",
+    "httpx-sse>=0.3.1"
 ]
 requires-python = ">=3.9"
 
