--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -5,7 +5,7 @@ name: Integration Tests
 
 on:
   push:
-    branches: [ "main", "develop"  ]
+    branches: [ "main"  ]
   schedule:
     - cron: '15 * * * *'
 
