--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "httpx>=0.24.1",
     "aiolimiter>=1.1.0",
     "tqdm>=4.65.0",
-    "httpx-sse>=0.3.1"
+    "httpx-sse>=0.3.1",
+    "cachetools>=5.0.0"
 ]
 requires-python = ">=3.9"
 
