--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "httpx>=0.24.1",
     "aiolimiter>=1.1.0",
     "tqdm>=4.65.0",
-    "httpx-sse>=0.3.1"
+    "httpx-sse>=0.3.1",
+    "cachetools>=5.0.0"
 ]
 requires-python = ">=3.9"
 
@@ -41,7 +42,7 @@ dev = [
   "sphinx>=6.1.3",
   "furo>=2022.12.7",
   "twine>=4.0.2",
-  "pytest-asyncio>=0.21.0",
+  "pytest-asyncio>=0.21.1",
   "pytest-mock>=3.10.0",
   "setuptools-scm>=7.1.0",
   "pytest-httpx>=0.22.0",
