feat(tokenize): introduce dynamic rate limiter Ref: #195
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "aiohttp>=3.8.4",
     "pyyaml>=6.0.0",
-    "httpx>=0.24.1",
+    "httpx>=0.24.1,<1",
     "aiolimiter>=1.1.0",
     "tqdm>=4.65.0",
     "httpx-sse>=0.3.1",
