--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ readme = "README.md"
 dependencies = [
     "urllib3<2", # https://github.com/psf/requests/issues/6432
     "requests>=2.31.0",
-    "pydantic>=1.10.10,<2",
+    "pydantic>=2.0.0",
     "python-dotenv>=1.0.0",
     "aiohttp>=3.8.4",
     "pyyaml>=6.0.0",
@@ -54,7 +54,7 @@ dev = [
   "build>=0.10.0"
 ]
 langchain = [
-  "langchain>=0.0.200"
+  "langchain>=0.0.267"
 ]
 huggingface = [
   "datasets>=2.13.0",
@@ -65,7 +65,7 @@ pandas = [
 ]
 localserver = [
   "uvicorn>=0.22.0",
-  "fastapi>=0.97.0"
+  "fastapi>=0.100.0"
 ]
 
 # As new extensions are added, they should also be added
@@ -100,3 +100,9 @@ source = ["src"]
 [tool.setuptools_scm]
 write_to = "src/genai/_version.py"
 local_scheme = "no-local-version"
+
+[tool.black]
+line-length = 120
+
+[tool.isort]
+profile = "black"
