--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -1,18 +1,20 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Integration Tests
+name: E2E Tests
 
 on:
   push:
     branches: [ "main"  ]
   schedule:
     - cron: '0 6 * * *'
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    environment: integration-tests
+    timeout-minutes: 20
     strategy:
       fail-fast: false
       matrix:
@@ -27,10 +29,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e ".[dev]"
-        python -m pip install -e ".[all]"
-    - name: Run integration tests
+        python -m pip install -e ".[dev]" --disable-pip-version-check
+        python -m pip install -e ".[all]" --disable-pip-version-check
+    - name: Run E2E Tests
       env:
         GENAI_API: ${{ vars.GENAI_API }}
         GENAI_KEY: ${{ secrets.GENAI_KEY }}
-      run: pytest -m integration --no-cov
+      run: pytest -m 'e2e' --no-cov
