--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,21 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
+
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -27,11 +32,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e ".[dev]"
-        python -m pip install -e ".[all]"
+        python -m pip install -e ".[dev]" --disable-pip-version-check
+        python -m pip install -e ".[all]" --disable-pip-version-check
     - name: Lint with pre-commit
       run: pre-commit run --all-files
-    - name: Plain unit tests with pytest
-      run: pytest -m 'unit or extension' --cov-report=lcov:coverage/lcov.info --cov=genai
+    - name: Tests (unit / integration / extension)
+      run: pytest -m 'unit or integration or extension' --cov-report=lcov:coverage/lcov.info --cov=genai
+      env:
+        GENAI_API: ${{ vars.DUMMY_GENAI_API }}
+        GENAI_KEY: ${{ vars.DUMMY_GENAI_KEY }}
     - name: Coveralls
       uses: coverallsapp/github-action@v2
