--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,17 +20,18 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - name: Install poetry
+      run: pipx install poetry
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'poetry'
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -e ".[dev]" --disable-pip-version-check
+      run: poetry install --no-interaction
     - name: Build documentation
-      run: poe docs --type build
+      run: poetry run poe docs --type build
     - name: Setup Pages
       uses: actions/configure-pages@v3
     - name: Upload artifact
