--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -21,18 +21,18 @@ jobs:
         python-version: ["3.11"]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - name: Install poetry
+      run: pipx install poetry
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'poetry'
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -e ".[dev]" --disable-pip-version-check
-        python -m pip install -e ".[all]" --disable-pip-version-check
+      run: poetry install --no-interaction
     - name: Run E2E Tests
       env:
         GENAI_API: ${{ vars.GENAI_API }}
         GENAI_KEY: ${{ secrets.GENAI_KEY }}
-      run: pytest -m 'e2e' --no-cov
+      run: poetry run pytest -m 'e2e' --no-cov
