--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,48 @@
-[build-system]
-requires = ["setuptools>=68.0.0", "wheel>=0.40.0", "setuptools_scm[toml]>=7.1.0"]
-build-backend = "setuptools.build_meta"
-
-[project]
+[tool.poetry]
 name = "ibm-generative-ai"
-dynamic = ["version"]
 authors = [
-  {name = "Tomas Dvorak", email = "tomas.dvorak@ibm.com"},
-  {name = "Radek Jezek", email = "radek.jezek@ibm.com"},
-  {name = "David Kristek", email = "david.kristek@ibm.com"},
+  "Tomas Dvorak <tomas.dvorak@ibm.com>",
+  "Radek Jezek <radek.jezek@ibm.com>",
+  "David Kristek <david.kristek@ibm.com>",
 ]
 maintainers = [
-  {name = "Tomas Dvorak", email = "tomas.dvorak@ibm.com"},
-  {name = "Radek Jezek", email = "radek.jezek@ibm.com"},
+  "Tomas Dvorak <tomas.dvorak@ibm.com>",
+  "Radek Jezek <radek.jezek@ibm.com>",
 ]
 description = "IBM Generative AI is a Python library built on IBM's large language model REST interface."
 readme = "README.md"
-dependencies = [
-    "pydantic>=2.0.0",
-    "python-dotenv>=1.0.0",
-    "aiohttp>=3.9.0",
-    "httpx>=0.25.0,<1",
-    "aiolimiter>=1.1.0",
-    "httpx-sse>=0.3.1"
+version = "0.0.0"
+packages = [{include = "genai", from="src"}]
+
+[build-system]
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
+
+[tool.poetry-dynamic-versioning]
+enable = true
+vcs = "git"
+style = "semver"
+
+[tool.poetry-dynamic-versioning.substitution]
+folders = [
+  { path = "src" }
 ]
-requires-python = ">=3.9"
+
+[tool.poetry.dependencies]
+python = "^3.9"
+pydantic = "^2.0.0"
+python-dotenv = "^1.0.0"
+aiohttp = "^3.9.0"
+httpx = "^0.26.0"
+aiolimiter = "1.1.0"
+httpx-sse = "^0.3.0"
+langchain = { version = "~0.0.267",  optional = true }
+pyyaml = { version = "^6.0.0", optional = true }
+datasets = { version = "^2.13.0",  optional = true }
+transformers = { version = "^4.33.3",  optional = true, extras=["agents"] }
+llama-index = { version = "^0.9.15",  optional = true }
+uvicorn = { version = "^0.22.0",  optional = true }
+fastapi = { version = "^0.100.0",  optional = true }
 
 [tool.black] # left for IDE compatibility (pycharm)
 line-length = 120
@@ -55,63 +73,34 @@ max-complexity = 18
 [tool.ruff.lint.isort]
 known-first-party = ["genai"]
 
-[project.optional-dependencies]
-dev = [
-  "pytest>=7.3.2",
-  "pytest-dotenv>=0.5.2",
-  "pre-commit>=3.3.2",
-  "pytest-cov>=4.1.0",
-  "sphinx>=6.1.3",
-  "furo>=2022.12.7",
-  "twine>=4.0.2",
-  "pytest-asyncio>=0.21.1",
-  "pytest-mock>=3.10.0",
-  "setuptools-scm>=7.1.0",
-  "pytest-httpx>=0.28.0",
-  "build>=0.10.0",
-  "datamodel-code-generator[http]>=0.25.2,<1",
-  # We need this fix for httpx (merged but not released yet): https://github.com/kevin1024/vcrpy/pull/784
-  "vcrpy @ git+https://github.com/kevin1024/vcrpy.git",
-  "pytest-recording>=0.13.1,<1",
-  "pytest-subtests>=0.11.0",
-  "pyyaml>=6.0.0",
-  "autodoc_pydantic>=2.0.0",
-  "ruff>=0.1.11",
-  "poethepoet>=0.24.4",
-]
-langchain = [
-  "langchain>=0.0.267",
-  "pyyaml>=6.0.0"
-]
-huggingface = [
-  "datasets>=2.13.0",
-  "transformers[agents]>=4.33.3"
-]
-llama-index = [
-  "llama-index>=0.9.15"
-]
-pandas = [
-  "pandas>=2.0.0"
-]
-localserver = [
-  "uvicorn>=0.22.0",
-  "fastapi>=0.100.0"
-]
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.2"
+pytest-dotenv = "^0.5.2"
+pre-commit = "^3.3.2"
+pytest-cov = "^4.1.0"
+sphinx = "^6.1.3"
+furo = "^2022.12.7"
+twine = "^4.0.2"
+pytest-asyncio = "^0.21.1"
+pytest-mock = "^3.10.0"
+setuptools-scm = "^7.1.0"
+pytest-httpx = "^0.28.0"
+build = "^0.10.0"
+datamodel-code-generator = { version="^0.25.2", extras=["http"] }
+vcrpy = { "git" = "https://github.com/kevin1024/vcrpy.git" }
+pytest-recording = "^0.13.1"
+pytest-subtests = "^0.11.0"
+autodoc_pydantic = "^2.0.0"
+ruff = "^0.1.11"
+poethepoet = "^0.24.4"
+pandas = "^2.0.0"
+pyyaml = "^6.0.0"
 
-# As new extensions are added, they should also be added
-all = [
-  "ibm-generative-ai[langchain, huggingface, llama-index, localserver]"
-]
-
-[options]
-package_dir=[
-  "src"
-]
-
-[options.packages.find]
-where=[
-  "src/genai"
-]
+[tool.poetry.extras]
+langchain = ["langchain", "pyyaml"]
+huggingface = ["datasets", "transformers"]
+llama-index = ["llama-index"]
+localserver = ["uvicorn", "fastapi"]
 
 [tool.pytest.ini_options]
 addopts = "--cov --cov-report term-missing --cov-fail-under 80"
@@ -146,17 +135,18 @@ warn_required_dynamic_aliases = true
 
 [tool.poe.tasks.install]
 help = "Install dependencies for the SDK core and it's extensions"
-cmd = "pip install -e '.[all]' --disable-pip-version-check"
+cmd = "poetry install --all-extras --without dev"
 
 [tool.poe.tasks.install-dev]
 help = "Install dependencies and related tooling for development"
-sequence = [{ cmd = "pip install -e '.[dev]' --disable-pip-version-check" }, { cmd = "pre-commit install" }]
+sequence = [{ cmd = "poetry install --all-extras" }, { cmd = "pre-commit install" }]
 deps = ["install"]
 
 [tool.poe.tasks.clean]
 help = "Remove all artifacts and builds"
 sequence = [
     { script = "shutil:rmtree('build/', ignore_errors=1)"},
+    { script = "shutil:rmtree('dist/', ignore_errors=1)"},
     { ref = "docs --type=clear" }
 ]
 
