--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,13 @@ poethepoet = "^0.24.4"
 pandas = "^2.0.0"
 pyyaml = "^6.0.0"
 tqdm = "^4.66.1"
+sphinx-toolbox = "3.5.0"
+git-changelog = "2.4.0"
+gitchangelog = "3.0.4"
+pystache = "0.6.5"
+tabulate = "0.9.0"
+m2r = "^0.3.1"
+
 
 [tool.poetry.extras]
 langchain = ["langchain", "pyyaml"]
@@ -203,6 +210,26 @@ args = ["type"]
     cwd = "documentation"
     help = "Remove build"
     sequence = [{ "script" = "shutil:rmtree('build/', ignore_errors=1)" }, { "script" = "shutil:rmtree('source/rst_source', ignore_errors=1)" }, { cmd = "make clean" }]
+
+[tool.poe.tasks.changelog]
+help = "Changelog related commands"
+control.expr = "type"
+args = [
+    { name = "type" },
+    { name = "version", positional = true },
+]
+
+    [[tool.poe.tasks.changelog.switch]]
+    case = "update"
+    help = "Update unreleased changelog section"
+    env = { "PYTHONPATH" = "scripts" }
+    cmd = "python scripts/docs_changelog_generator/generate_changelog.py --debug"
+
+    [[tool.poe.tasks.changelog.switch]]
+    case = "release"
+    help = "Remove build"
+    env = { "PYTHONPATH" = "scripts" }
+    cmd = "python scripts/docs_changelog_generator/release_changelog.py $version"
 
 [tool.poe.tasks.test]
 args = ["type"]
