--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -29,7 +29,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: 'poetry'
     - name: Install dependencies
-      run: poetry install --no-interaction
+      run: poetry install --no-interaction --all-extras
     - name: Build documentation
       run: poetry run poe docs --type build
     - name: Setup Pages
