ci: update release action
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,6 +1,7 @@
 name: Upload package to pypi
 
 on:
+  workflow_dispatch:
   release:
     types: [published]
 
@@ -13,6 +14,10 @@ jobs:
     environment: publish
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Get tags
+      run: git fetch --tags origin
     - name: Install poetry
       run: pipx install poetry
     - name: Set up Python ${{ matrix.python-version }}
