ci: update poetry dynamic versioning
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ build-backend = "poetry_dynamic_versioning.backend"
 enable = true
 vcs = "git"
 style = "semver"
+strict = true
+metadata = false
 
 [tool.poetry-dynamic-versioning.substitution]
 folders = [
