--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,8 @@ folders = [
 [tool.poetry.dependencies]
 python = "^3.9"
 pydantic = "^2.0.0"
-python-dotenv = "^1.0.0"
-aiohttp = "^3.9.0"
 httpx = "^0.26.0"
-aiolimiter = "1.1.0"
+aiolimiter = "^1.1.0"
 httpx-sse = "^0.3.0"
 langchain = { version = "~0.0.267",  optional = true }
 pyyaml = { version = "^6.0.0", optional = true }
@@ -76,18 +74,16 @@ max-complexity = 18
 known-first-party = ["genai"]
 
 [tool.poetry.group.dev.dependencies]
+python-dotenv = "^1.0.0"
 pytest = "^7.3.2"
 pytest-dotenv = "^0.5.2"
 pre-commit = "^3.3.2"
 pytest-cov = "^4.1.0"
 sphinx = "^6.1.3"
 furo = "^2022.12.7"
-twine = "^4.0.2"
 pytest-asyncio = "^0.21.1"
 pytest-mock = "^3.10.0"
-setuptools-scm = "^7.1.0"
 pytest-httpx = "^0.28.0"
-build = "^0.10.0"
 datamodel-code-generator = { version="^0.25.2", extras=["http"] }
 vcrpy = { "git" = "https://github.com/kevin1024/vcrpy.git" }
 pytest-recording = "^0.13.1"
