--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ pydantic = "^2.0.0"
 httpx = "^0.26.0"
 aiolimiter = "^1.1.0"
 httpx-sse = "^0.3.0"
-langchain = { version = "~0.0.267",  optional = true }
+langchain-core = { version = "^0.1.0", optional = true }
 pyyaml = { version = "^6.0.0", optional = true }
 datasets = { version = "^2.13.0",  optional = true }
 transformers = { version = "^4.33.3",  optional = true, extras=["agents"] }
@@ -103,7 +103,7 @@ m2r = "^0.3.1"
 
 
 [tool.poetry.extras]
-langchain = ["langchain", "pyyaml"]
+langchain = ["langchain-core", "pyyaml"]
 huggingface = ["datasets", "transformers"]
 llama-index = ["llama-index"]
 localserver = ["uvicorn", "fastapi"]
