--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ transformers = { version = "^4.33.3",  optional = true, extras=["agents"] }
 llama-index = { version = "^0.9.15",  optional = true }
 uvicorn = { version = "^0.22.0",  optional = true }
 fastapi = { version = "^0.100.0",  optional = true }
+lm-eval = { version = "^0.4.0",  optional = true }
+tqdm = { version = "^4.66.1", optional = true }
 
 [tool.black] # left for IDE compatibility (pycharm)
 line-length = 120
@@ -100,16 +102,19 @@ gitchangelog = "3.0.4"
 pystache = "0.6.5"
 tabulate = "0.9.0"
 m2r = "^0.3.1"
+mypy = "^1.8.0"
 
 
 [tool.poetry.extras]
 langchain = ["langchain-core", "pyyaml"]
 huggingface = ["datasets", "transformers"]
 llama-index = ["llama-index"]
+lm-eval = ["lm-eval", "tqdm"]
 localserver = ["uvicorn", "fastapi"]
 
 [tool.pytest.ini_options]
 addopts = "--cov --cov-report term-missing --cov-fail-under 80 -v"
+testpaths = ["tests"]
 markers = [
     "unit",
     "integration",
@@ -142,6 +147,10 @@ warn_required_dynamic_aliases = true
 [tool.poe.tasks.install]
 help = "Install dependencies for the SDK core and it's extensions"
 cmd = "poetry install --all-extras --without dev"
+
+[tool.poe.tasks.lm_eval]
+help = "Run lm_eval with support for genai models"
+cmd = "python -m genai.extensions.lm_eval"
 
 [tool.poe.tasks.install-dev]
 help = "Install dependencies and related tooling for development"
