--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ pytest-asyncio = "^0.21.1"
 pytest-mock = "^3.10.0"
 pytest-httpx = "^0.28.0"
 datamodel-code-generator = { version="^0.25.2", extras=["http"] }
-vcrpy = { "git" = "https://github.com/kevin1024/vcrpy.git" }
+vcrpy = "^6.0.0"
 pytest-recording = "^0.13.1"
 pytest-subtests = "^0.11.0"
 autodoc_pydantic = "^2.0.0"
